--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       <meta name="description" content="CNC Technical AI Chatbot" />
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
       <title>CNC Technical AI Chat</title>
     </head>
     
